SD-269 Fix icon align and fix sort transactions

--- a/front/src/app/dapps/column-func/ColumnFunc.less
+++ b/front/src/app/dapps/column-func/ColumnFunc.less
@@ -70,6 +70,7 @@
 
                 .dapp-btn {
                     display: block;
+                    flex: 1;
 
                     cursor: pointer;
                     text-align: left;
